# crypto-obi-prediction

./: .gitignore  pyproject.toml
notebooks/01_obi/: 00_data_access.ipynb
notes/: decisions.md  learnings.md  theoreticals.md
